--- a/frontend/chat/chat.scss
+++ b/frontend/chat/chat.scss
@@ -21,7 +21,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  * """
  */
-@import '../../../scss/colors';
+@import '~scss/colors';
 
 .chat {
   width: 100%;
